samples/_failures_safe/1761187051_394c0a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_11bdebfb.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_11bdebfb.c:146:30: error: expected ‘;’ at end of input
  146 |     if (n == 1) return matrix
      |                              ^
      |                              ;
./samples/SAFE/__tmp_11bdebfb.c:146:5: error: expected declaration or statement at end of input
  146 |     if (n == 1) return matrix
      |     ^~
